code25_all/python/829916.txt
python-cloudfiles-1.3.1]# python setup.py install
running install
running build
running build_py
running install_lib
byte-compiling /usr/lib/python2.3/site-packages/cloudfiles/container.py to container.pyc
  File "/usr/lib/python2.3/site-packages/cloudfiles/container.py", line 74
    @requires_name(InvalidContainerName)
    ^
SyntaxError: invalid syntax
byte-compiling /usr/lib/python2.3/site-packages/cloudfiles/storage_object.py to storage_object.pyc
  File "/usr/lib/python2.3/site-packages/cloudfiles/storage_object.py", line 85
    @requires_name(InvalidObjectName)
    ^
SyntaxError: invalid syntax

